fix: changed configs