@@ -227,5 +227,5 @@ networks:
 ### Procfile
 
 ```text
-web: java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap $JAVA_OPTS -Dserver.port=$PORT -Dspring.profiles.active=heroku -jar target/*.jar
+web: java -XX:+UnlockExperimentalVMOptions -XX:+UseContainerSupport $JAVA_OPTS -Dserver.port=$PORT -Dspring.profiles.active=railway -jar target/*.jar
 ```
